1. pom.xml updated for formatter.core.tests 2. formatter.core.tests added to build modules & org.eclispe.php.test-feature