@@ -12,5 +12,29 @@
 	<groupId>org.eclipse.php</groupId>
 	<artifactId>org.eclipse.php.formatter.core.tests</artifactId>
 	<version>3.2.0-SNAPSHOT</version>
-	<packaging>eclipse-plugin</packaging>
+	<packaging>eclipse-test-plugin</packaging>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-surefire-plugin</artifactId>
+				<configuration>
+					<useUIHarness>true</useUIHarness>
+					<useUIThread>false</useUIThread>
+					<argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+					<bundleStartLevel>
+						<bundle>
+							<id>org.eclipse.equinox.ds</id>
+							<level>1</level>
+							<autoStart>true</autoStart>
+						</bundle>
+					</bundleStartLevel>
+					<testSuite>org.eclipse.php.formatter.core.tests</testSuite>
+					<testClass>org.eclipse.php.formatter.core.tests.AllTests</testClass>
+					<testFailureIgnore>true</testFailureIgnore>
+					<skip>false</skip>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
